# gh-prompt-scan

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
ciguard/: cli.py
ciguard/scanner/: loader.py  parser.py  reporter.py  taint.py  trigger.py
tests/: test_taint.py
tests/fixtures/: tv4.bad.yml  tv4.good.yml  tv5.bad.yml  tv5.good.yml  tv6.bad.yml  tv6.good.yml  tv7.bad.yml  tv7.good.yml
